--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 [dependencies]
 color-eyre = "0.6.3"
 fncmd = "2.1.0"
+glob = "0.3.1"
 uuid = { version = "1.8.0", features = ["v4"] }
